# Featherweight

./: .gitignore  CMakeLists.txt  README.md  build.bat  config.ini  makefile  sprites.xcf  start.sh
etc/: fragShader.hlsl  fragshader.fs  vertShader.hlsl  vertShader.vs
include/: camera.h  common.h  ecs.h  event.h  fileHelper.h  graphicsHelper.h  input.h  math.h  resources.h  settings.h  stateMachine.h  textureGenerator.h
res/: gun.bbmodel  gun.mtl  pokeball.mtl
src/: camera.c  ecs.c  engine.c  event.c  fileHelper.c  graphicsHelper.c  input.c  loot.c  main.c  stateMachine.c  textureGenerator.c
